push create report successful with offices